force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/LEXRegistration_FieldProperties__mdt.object-meta.xml
<CustomObject>
    <label>LEXRegistration_FieldProperties</label>
    <pluralLabel>LEXRegistration_FieldProperties</pluralLabel>
</CustomObject>