force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/fields/Custom_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Help_Text__c</fullName>
    <inlineHelpText>Controls the Text that is displayed as Help Text when the &quot;Override Setup Help Text&quot; is TRUE.</inlineHelpText>
    <label>Custom Help Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>