force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/fields/Field_Screen_Size__c.field-meta.xml
<CustomField>
    <fullName>Field_Screen_Size__c</fullName>
    <inlineHelpText>Controls the number of fields displayed per line. There are 12 “spaces” per line. If you want one field in a line, set the screen size to 12. Two fields = 6, Three fields = 4, and 4 fields = 3.</inlineHelpText>
    <label>Field Screen Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
                <default>true</default>
                <label>6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>