force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/fields/LEXRegistration_PageProperty__c.field-meta.xml
<CustomField>
    <fullName>LEXRegistration_PageProperty__c</fullName>
    <inlineHelpText>Controls which section of the Registration Page the Field Property should be applied to.</inlineHelpText>
    <label>LEXRegistration PageProperty</label>
    <referenceTo>LEXRegistration_PageProperties__mdt</referenceTo>
    <relationshipLabel>LEXRegistration_FieldProperties</relationshipLabel>
    <relationshipName>LEXRegistration_FieldProperties</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>