force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/fields/Override_Setup_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Override_Setup_Help_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls the ability to override the Help Text that is in Setup.  This Field is tied to the &quot;Custom Help Text&quot; Field.</inlineHelpText>
    <label>Override Setup Help Text</label>
    <type>Checkbox</type>
</CustomField>