force-app/main/default/objects/LEXRegistration_FieldProperties__mdt/listViews/All_Field_Properties.listView-meta.xml
<ListView>
    <fullName>All_Field_Properties</fullName>
    <columns>Active__c</columns>
    <columns>MasterLabel</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_Screen_Size__c</columns>
    <columns>LEXRegistration_PageProperty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Properties</label>
    <language>en_US</language>
</ListView>